@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>fr.landel</groupId>
@@ -33,7 +34,7 @@
 	</licenses>
 
 	<prerequisites>
-		<maven>3.3.0</maven>
+		<maven>3.5.4</maven>
 	</prerequisites>
 
 	<distributionManagement>
@@ -78,7 +79,7 @@
 		<application.org.name>Gilandel</application.org.name>
 		<application.org.owners>Gilles Landel</application.org.owners>
 		<application.org.url>https://github.com/Gilandel</application.org.url>
-		
+
 		<application.org.license>apache_v2</application.org.license>
 		<application.org.license.url>http://www.apache.org/licenses/LICENSE-2.0</application.org.license.url>
 
@@ -87,9 +88,8 @@
 		<canUpdateDescription>false</canUpdateDescription>
 
 		<!-- Project information -->
-		<jdk.version>8</jdk.version>
-		<maven.compiler.source>${jdk.version}</maven.compiler.source>
-		<maven.compiler.target>${jdk.version}</maven.compiler.target>
+		<jdk.version>17</jdk.version>
+		<maven.compiler.release>${jdk.version}</maven.compiler.release>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
@@ -102,73 +102,76 @@
 		<!-- others -->
 		<gpg.home>${env.HOME}/build/Gilandel/utils/distribution</gpg.home>
 
-		<!-- Plugins version -->
-		<dependency.plugin.version>3.1.1</dependency.plugin.version>
-		<source.plugin.version>3.0.1</source.plugin.version>
-		<resources.plugin.version>3.1.0</resources.plugin.version>
+		<!-- Plug-ins version -->
+		<dependency.plugin.version>3.5.0</dependency.plugin.version>
+		<source.plugin.version>3.2.1</source.plugin.version>
+		<resources.plugin.version>3.3.0</resources.plugin.version>
 
 		<verifier.plugin.version>1.1</verifier.plugin.version>
-		<clean.plugin.version>3.1.0</clean.plugin.version>
-		<compiler.plugin.version>3.7.0</compiler.plugin.version>
-		<install.plugin.version>2.5.2</install.plugin.version>
-		<deploy.plugin.version>2.8.2</deploy.plugin.version>
-		<site.plugin.version>3.7.1</site.plugin.version>
-		<release.plugin.version>2.5.3</release.plugin.version>
+		<clean.plugin.version>3.2.0</clean.plugin.version>
+		<compiler.plugin.version>3.10.1</compiler.plugin.version>
+		<install.plugin.version>3.1.0</install.plugin.version>
+		<deploy.plugin.version>3.1.0</deploy.plugin.version>
+		<site.plugin.version>4.0.0-M4</site.plugin.version>
+		<release.plugin.version>3.0.0-M7</release.plugin.version>
 
-		<jar.plugin.version>3.1.0</jar.plugin.version>
-		<war.plugin.version>3.2.2</war.plugin.version>
-		<shade.plugin.version>3.1.1</shade.plugin.version>
-		<proguard.plugin.version>2.0.14</proguard.plugin.version>
+		<jar.plugin.version>3.3.0</jar.plugin.version>
+		<war.plugin.version>3.3.2</war.plugin.version>
+		<shade.plugin.version>3.4.1</shade.plugin.version>
+		<proguard.plugin.version>2.6.0</proguard.plugin.version>
 
-		<assembly.plugin.version>3.1.0</assembly.plugin.version>
-		<buildhelper.plugin.version>3.0.0</buildhelper.plugin.version>
+		<assembly.plugin.version>3.4.2</assembly.plugin.version>
+		<buildhelper.plugin.version>3.3.0</buildhelper.plugin.version>
 
-		<failsafe.plugin.version>2.22.0</failsafe.plugin.version>
-		<surefire.plugin.version>2.22.0</surefire.plugin.version>
-		<jacoco.plugin.version>0.8.1</jacoco.plugin.version>
-		<sonar.plugin.version>3.4.1.1168</sonar.plugin.version>
+		<failsafe.plugin.version>3.0.0-M8</failsafe.plugin.version>
+		<surefire.plugin.version>3.0.0-M8</surefire.plugin.version>
+		<jacoco.plugin.version>0.8.8</jacoco.plugin.version>
+		<sonar.plugin.version>3.9.1.2184</sonar.plugin.version>
 
-		<gpg.plugin.version>1.6</gpg.plugin.version>
-		<nexus.staging.plugin.version>1.6.8</nexus.staging.plugin.version>
-		<exec.plugin.version>1.6.0</exec.plugin.version>
+		<gpg.plugin.version>3.0.1</gpg.plugin.version>
+		<nexus.staging.plugin.version>1.6.13</nexus.staging.plugin.version>
+		<exec.plugin.version>3.1.0</exec.plugin.version>
 
-		<license.plugin.version>1.16</license.plugin.version>
-		<javadoc.plugin.version>3.0.1</javadoc.plugin.version>
+		<license.plugin.version>2.0.0</license.plugin.version>
+		<javadoc.plugin.version>3.4.1</javadoc.plugin.version>
 		<changelog.plugin.version>2.3</changelog.plugin.version>
-		<project.reports.plugin.version>3.0.0</project.reports.plugin.version>
+		<project.reports.plugin.version>3.4.2</project.reports.plugin.version>
 
 		<!-- Dependencies version -->
-		<proguard.version>6.0.3</proguard.version>
-		
-		<commons.lang.version>3.7</commons.lang.version>
-		<commons.beanutils.version>1.9.3</commons.beanutils.version>
-		<commons.collections.version>4.1</commons.collections.version>
+		<proguard.version>6.3.0beta1</proguard.version>
 
-		<logback.version>1.2.3</logback.version>
-		<slf4j.version>1.7.25</slf4j.version>
+		<commons.lang.version>3.12.0</commons.lang.version>
+		<commons.beanutils.version>1.9.4</commons.beanutils.version>
+		<commons.collections.version>4.4</commons.collections.version>
 
-		<!-- Only the class 'org.gl.utils.model.hibernate.ImprovedNamingStrategy' 
-			requires Hibernate 5 -->
+		<jaxb.version>2.4.0-b180830.0359</jaxb.version>
+
+		<logback.version>1.4.5</logback.version>
+		<slf4j.version>2.0.6</slf4j.version>
+
+		<!-- Only the class 'org.gl.utils.model.hibernate.ImprovedNamingStrategy' requires Hibernate 5 -->
 		<!-- For the others classes, Hibernate 4 can be used -->
 		<hibernate.jpa.version>1.0.2</hibernate.jpa.version>
-		<hibernate.version>5.3.1.Final</hibernate.version>
-		<hibernate.validator.version>6.0.10.Final</hibernate.validator.version>
+		<hibernate.version>6.2.0.CR2</hibernate.version>
+		<hibernate.entitymanager.version>6.0.0.Alpha7</hibernate.entitymanager.version>
+		<hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
 
-		<tomcat.version>9.0.10</tomcat.version>
-		<h2.version>1.4.197</h2.version>
+		<tomcat.version>11.0.0-M1</tomcat.version>
+		<h2.version>2.1.214</h2.version>
 
-		<spring.data.version>2.0.5.RELEASE</spring.data.version>
-		<spring.version>5.0.7.RELEASE</spring.version>
-		<aspectj.version>1.9.1</aspectj.version>
+		<spring.data.version>3.0.1</spring.data.version>
+		<spring.version>6.0.4</spring.version>
+		<aspectj.version>1.9.19</aspectj.version>
 
-		<jackson.version>2.9.6</jackson.version>
+		<jackson.version>2.14.2</jackson.version>
 
-		<poi.version>3.17</poi.version>
+		<poi.version>5.2.3</poi.version>
 
-		<junit.version>4.12</junit.version>
+		<junit.version>5.9.2</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
+		<mockito.version>5.1.1</mockito.version>
 
-		<jmh.version>1.21</jmh.version>
+		<jmh.version>1.36</jmh.version>
 	</properties>
 
 	<reporting>
@@ -196,7 +199,6 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
 					<show>package</show>
-					<aggregate>true</aggregate>
 				</configuration>
 			</plugin>
 
@@ -273,7 +275,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
@@ -284,7 +286,7 @@
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
-			
+
 			<!-- generates 'argLine' parameter for surefire -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -310,8 +312,7 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${compiler.plugin.version}</version>
 					<configuration>
-						<source>${maven.compiler.source}</source>
-						<target>${maven.compiler.target}</target>
+						<release>${maven.compiler.release}</release>
 						<showDeprecation>true</showDeprecation>
 						<showWarnings>true</showWarnings>
 						<encoding>${project.build.sourceEncoding}</encoding>
@@ -418,6 +419,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
 					<version>${failsafe.plugin.version}</version>
+					<configuration>
+						<argLine>--illegal-access=warn</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -440,7 +444,9 @@
 						</includes>
 						<!-- argLine is generated by jacoco (prepare-agent) -->
 						<argLine>@{argLine}
-							-Dfile.encoding=${project.build.resourcesEncoding}</argLine>
+							-Dfile.encoding=${project.build.resourcesEncoding}
+							--illegal-access=warn</argLine>
+						<forkCount>0</forkCount>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -493,18 +499,18 @@
 					<version>${project.reports.plugin.version}</version>
 				</plugin>
 				<plugin>
-                <groupId>com.github.wvengen</groupId>
-                <artifactId>proguard-maven-plugin</artifactId>
-                <version>${proguard.plugin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>net.sf.proguard</groupId>
-                        <artifactId>proguard-base</artifactId>
-                        <version>${proguard.version}</version>
-                        <scope>runtime</scope>
-                    </dependency>
-                </dependencies>
-            </plugin>
+					<groupId>com.github.wvengen</groupId>
+					<artifactId>proguard-maven-plugin</artifactId>
+					<version>${proguard.plugin.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>net.sf.proguard</groupId>
+							<artifactId>proguard-base</artifactId>
+							<version>${proguard.version}</version>
+							<scope>runtime</scope>
+						</dependency>
+					</dependencies>
+				</plugin>
 
 				<!-- Write java header file and generate thrid-party file -->
 				<plugin>
@@ -545,8 +551,7 @@
 					</configuration>
 				</plugin>
 
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -699,15 +704,35 @@
 			<artifactId>jcl-over-slf4j</artifactId>
 		</dependency>
 
-		<!-- Unit testing and perforance testing -->
+		<!-- Unit testing and performance testing -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -733,9 +758,33 @@
 		<dependencies>
 			<!-- Unit testing -->
 			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-api</artifactId>
 				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-engine</artifactId>
+				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>${mockito.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-inline</artifactId>
+				<version>${mockito.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-junit-jupiter</artifactId>
+				<version>${mockito.version}</version>
 				<scope>test</scope>
 			</dependency>
 
@@ -773,6 +822,13 @@
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
 				<version>${logback.version}</version>
+			</dependency>
+
+			<!-- XML De/Serialization -->
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>${jaxb.version}</version>
 			</dependency>
 
 			<!-- Commons -->
@@ -819,7 +875,7 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-entitymanager</artifactId>
-				<version>${hibernate.version}</version>
+				<version>${hibernate.entitymanager.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate.javax.persistence</groupId>
